<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AngKor_Meas</string>
    <string name="action_settings">Settings</string>
   <string name="changing_fragments"></string>
<string name="responsive_ui">Responsive UI</string>
<string name="name">Name :</string>
<string name="price">Price :</string>
<string name="display">Display :</string>
<string name="data">Data :</string>
<string name="bluetooth">Bluetooth :</string>
<string name="camera">Camera :</string>
<string name="video">Video :</string>
<string name="os">OS :</string>
<string name="chipset">Chipset :</string>
<string name="color">Color :</string>
<string name="feature">Feature :</string>
<string name="battery">Battery :</string>
</resources>

